# annulus

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
src/annulus/: __init__.py  auto_brighten.py  color.py  detect.py  grid_search.py  matcher.py  ops.py  shape.py
src/anulus/: __init__.py  color.py  crop.py  detect.py  grid_search.py  matcher.py  settings.py  shape.py  template.py
